# laba4

./: CMakeLists.txt  KanakovOt4et.docx
vector/: CMakeLists.txt  Main.cpp
vectorlib/: CMakeLists.txt  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
